<resources>
    <string name="app_name">DevHelp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="upload_your_image">Upload Your Image</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Join Us</string>
    <string name="sign_in">Sign In</string>
    <string name="i_m_already_a_member">I am already a member.</string>
    <string name="i_am_a_new_user">I am a New user.</string>
    <string name="profile">Profile</string>
    <string name="sign_in_using_email_and_password">Sign In using Email and Password</string>
    <string name="sign_up_using_email_and_password">Sign Up using Email and Password</string>
    <string name="best_way_to_invest_your_money">Best way to invest Your Money!</string>
    <string name="or">Or</string>
    <string name="explore_items">JOB POST:</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <string name="for_all">CLOSE</string>
    <string name="sign_out">Sign Out Button</string>
    <string name="add_post">ADD DEV LISTING</string>
    <string name="profile_name">FULL NAME</string>
    <string name="profile_email">EMAIL ADDRESS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="github_link"><a href='https://github.com/Arthur-Butler'>GITHUB</a></string>
    <string name="linkedin_link"><a href='https://www.linkedin.com/in/arthur-butler-7721591a4'>LINKEDIN</a></string>
    <string name="personal_link"><a href='http://www.arthurnyanisobutler.com/'>PERSONAL WEBSITE</a></string>
    <string-array name="field_array">
        <item>BACK-END DEVELOPER</item>
        <item>FRONT-END DEVELOPER</item>
        <item>GRAPHIC DESIGNER</item>
        <item>FULL-STACK DEVELOPER</item>
        <item>DATA ANALYST</item>
        <item>DATABASE ADMINISTRATOR</item>
        <item>TESTER</item>
        <item>MOBILE DEVELOPER</item>
        <item>WEB DEVELOPER</item>
        <item>UI/UX DEVELOPER</item>
    </string-array>
    <string-array name="lang_array">
        <item>Python</item>
        <item>C#</item>
        <item>EXPRESS JS</item>
        <item>REACT JS</item>
        <item>NODE JS</item>
        <item>JAVA</item>
        <item>PHP</item>
        <item>DART</item>
        <item>FLUTTER</item>
        <item>SQL</item>
        <item>DELPHI</item>
        <item>KOTLIN</item>
        <item>C++</item>
        <item>C</item>
        <item>SAAS</item>
        <item>DJANGO</item>
        <item>MACHINE LEARNING</item>
        <item>MATPLOTLIB PY</item>
    </string-array>

</resources>