<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.FirstActivity">



    <!--<FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="1000dp"
        android:layout_height="1500dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />-->


    <ImageView
        android:id="@+id/front_page_image"
        android:layout_width="205dp"
        android:layout_height="255dp"
        android:layout_marginHorizontal="90dp"
        android:background="@drawable/logo2"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/login_borders"
        android:color="@color/black"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:background="@drawable/login_borders"
        android:id="@+id/password"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:gravity="center_horizontal"
        android:color="@color/black"
        android:padding="@dimen/activity_horizontal_margin"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="91dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:onClick="gotosigninpage"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:theme="@style/Button.White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.06" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:onClick="gotosignuppage"
        android:text="  Sign Up If You Do Not Have An Account  "
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ListView
        android:id="@+id/fullscreen_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>